<resources>
    <string name="app_name">DicodingMADE</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="status">Status</string>
    <string name="actor">Actor</string>
    <string name="synopsis">Synopsis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
